fix visibility

--- a/style.css
+++ b/style.css
@@ -91,8 +91,6 @@ body {
     text-align: center;
     color: rgb(243, 221, 124);
     bottom: 2vw;
-    opacity: 0;
-    animation: intro 2s forwards;
 }
 
 .footer_description{
@@ -120,9 +118,6 @@ img{
 #Footer {
     display: flex; 
     flex-direction: column;
-    color: white;
-    font-size: 1vw;
-    margin-top: 0.5vw;
 }
 
 #descriptionContainer   {
